<resources>
    <string name="app_name">P09 - ProblemStatment - SongList&amp;Review</string>
    <string name="yearInput">Enter year of release here</string>
    <string name="song_title">Song Title</string>
    <string name="etTitle">Enter song title here</string>
    <string name="singers">Singers</string>
    <string name="etSinger">Enter Singers\' name here</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string-array name="spinnerItems">
        <item></item>
    </string-array>
</resources>